force-app/main/default/objects/Task_Dependency__c/Task_Dependency__c.object-meta.xml
<CustomObject>
    <label>Task Dependency</label>
    <nameField>
        <displayFormat>TD-{0000}</displayFormat>
        <label>Task Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>