force-app/main/default/objects/Task_Dependency__c/fields/Dependency_Type__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Type__c</fullName>
    <label>Dependency Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finish-to-Start</fullName>
            </value>
            <value>
                <fullName>Start-to-Start</fullName>
            </value>
            <value>
                <fullName>Finish-to-Finish</fullName>
            </value>
            <value>
                <fullName>Start-to-Finish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>