force-app/main/default/objects/Task_Dependency__c/fields/Predecessor_Status__c.field-meta.xml
<CustomField>
    <fullName>Predecessor_Status__c</fullName>
    <formula>TEXT(Predecessor_Task__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Predecessor Status</label>
    <type>Text</type>
</CustomField>