force-app/main/default/objects/Task_Dependency__c/fields/Predecessor_Task__c.field-meta.xml
<CustomField>
    <fullName>Predecessor_Task__c</fullName>
    <label>Predecessor Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Task Dependencies</relationshipLabel>
    <relationshipName>Task_Dependencies_Predecessor</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>