force-app/main/default/objects/Task_Dependency__c/fields/Successor_Status__c.field-meta.xml
<CustomField>
    <fullName>Successor_Status__c</fullName>
    <formula>TEXT( Successor_Task__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Successor Status</label>
    <type>Text</type>
</CustomField>