force-app/main/default/objects/Task_Dependency__c/fields/Successor_Task__c.field-meta.xml
<CustomField>
    <fullName>Successor_Task__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Successor Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Task Dependencies (Successor Task)</relationshipLabel>
    <relationshipName>Task_Dependencies_Successor</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>